<?xml version="1.0"?>
<package>
	<name>map_view</name>
	<version>0.1.0</version>
	<description>The mapview package</description>   6 
	<maintainer email="you@yourdomain.tld">Your Name</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>move_base_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>move_base_msgs</run_depend>

</package>
